# corrosion_export

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.c
is_odd/: CMakeLists.txt  Cargo.toml  Config.cmake.in  build.rs
is_odd/include/is_odd/: is_odd.h
is_odd/src/: lib.rs
